# adzan

./: README.md  meson.build
data/: com.hrstwn.adzan.desktop  gschema.xml  meson.build
meson/: post_install.py
src/: Application.vala  Main.vala  meson.build
src/Widgets/: Clock.vala  HeaderBar.vala  List.vala  Window.vala
